scripts/infer_output/Ownership/tmp/javac.tmp.6fc596.out
[parsing started SimpleFileObject[/home/vanguard/projects/SAMutator/src/test/java/codetoanalyze/java/racerd/Ownership.java]]
[parsing completed 18ms]
[loading /modules/java.management.rmi/module-info.class]
[loading /modules/jdk.aot/module-info.class]
[loading /modules/java.datatransfer/module-info.class]
[loading /modules/jdk.javadoc/module-info.class]
[loading /modules/jdk.internal.ed/module-info.class]
[loading /modules/jdk.jlink/module-info.class]
[loading /modules/java.rmi/module-info.class]
[loading /modules/jdk.internal.le/module-info.class]
[loading /modules/java.xml/module-info.class]
[loading /modules/jdk.rmic/module-info.class]
[loading /modules/jdk.internal.vm.compiler/module-info.class]
[loading /modules/jdk.security.auth/module-info.class]
[loading /modules/java.desktop/module-info.class]
[loading /modules/java.scripting/module-info.class]
[loading /modules/jdk.localedata/module-info.class]
[loading /modules/jdk.unsupported/module-info.class]
[loading /modules/java.prefs/module-info.class]
[loading /modules/jdk.jartool/module-info.class]
[loading /modules/jdk.crypto.cryptoki/module-info.class]
[loading /modules/jdk.jfr/module-info.class]
[loading /modules/java.logging/module-info.class]
[loading /modules/java.net.http/module-info.class]
[loading /modules/java.se/module-info.class]
[loading /modules/jdk.naming.dns/module-info.class]
[loading /modules/jdk.internal.vm.ci/module-info.class]
[loading /modules/jdk.naming.rmi/module-info.class]
[loading /modules/java.security.jgss/module-info.class]
[loading /modules/java.xml.crypto/module-info.class]
[loading /modules/jdk.net/module-info.class]
[loading /modules/jdk.scripting.nashorn.shell/module-info.class]
[loading /modules/jdk.xml.dom/module-info.class]
[loading /modules/java.instrument/module-info.class]
[loading /modules/jdk.management.agent/module-info.class]
[loading /modules/jdk.jdi/module-info.class]
[loading /modules/jdk.management.jfr/module-info.class]
[loading /modules/jdk.sctp/module-info.class]
[loading /modules/jdk.scripting.nashorn/module-info.class]
[loading /modules/java.sql.rowset/module-info.class]
[loading /modules/java.transaction.xa/module-info.class]
[loading /modules/java.management/module-info.class]
[loading /modules/jdk.accessibility/module-info.class]
[loading /modules/java.base/module-info.class]
[loading /modules/jdk.editpad/module-info.class]
[loading /modules/java.sql/module-info.class]
[loading /modules/java.security.sasl/module-info.class]
[loading /modules/java.smartcardio/module-info.class]
[loading /modules/jdk.dynalink/module-info.class]
[loading /modules/jdk.pack/module-info.class]
[loading /modules/jdk.naming.ldap/module-info.class]
[loading /modules/jdk.hotspot.agent/module-info.class]
[loading /modules/jdk.jstatd/module-info.class]
[loading /modules/jdk.internal.opt/module-info.class]
[loading /modules/jdk.jdwp.agent/module-info.class]
[loading /modules/java.compiler/module-info.class]
[loading /modules/jdk.zipfs/module-info.class]
[loading /modules/jdk.unsupported.desktop/module-info.class]
[loading /modules/jdk.internal.jvmstat/module-info.class]
[loading /modules/jdk.charsets/module-info.class]
[loading /modules/jdk.jshell/module-info.class]
[loading /modules/jdk.management/module-info.class]
[loading /modules/jdk.jcmd/module-info.class]
[loading /modules/jdk.attach/module-info.class]
[loading /modules/java.naming/module-info.class]
[loading /modules/jdk.jsobject/module-info.class]
[loading /modules/jdk.jconsole/module-info.class]
[loading /modules/jdk.crypto.ec/module-info.class]
[loading /modules/jdk.security.jgss/module-info.class]
[loading /modules/jdk.compiler/module-info.class]
[loading /modules/jdk.httpserver/module-info.class]
[loading /modules/jdk.internal.vm.compiler.management/module-info.class]
[loading /modules/jdk.jdeps/module-info.class]
[search path for source files: .,/home/vanguard/projects/SAMutator/tools/Infer_Dependency/javax.inject.jar,/home/vanguard/projects/SAMutator/tools/Infer_Dependency/guava-23.0.jar,/home/vanguard/projects/SAMutator/tools/Infer_Dependency/android-support-v4.jar,/home/vanguard/projects/SAMutator/tools/Infer_Dependency/jsr305-src.jar,/home/vanguard/projects/SAMutator/tools/Infer_Dependency/kotlin-annotations-jvm-1.3.72.jar,/home/vanguard/projects/SAMutator/tools/Infer_Dependency/collection-1.1.0.jar,/home/vanguard/projects/SAMutator/tools/Infer_Dependency/jsr305.jar,/home/vanguard/projects/SAMutator/tools/Infer_Dependency/jackson-2.2.3.jar,/home/vanguard/projects/SAMutator/tools/Infer_Dependency/android-23.jar,/home/vanguard/projects/SAMutator/tools/Infer_Dependency/tools.jar]
[search path for class files: /home/vanguard/bin/jdk/jdk-11.0.12/lib/modules,.,/home/vanguard/projects/SAMutator/tools/Infer_Dependency/javax.inject.jar,/home/vanguard/projects/SAMutator/tools/Infer_Dependency/guava-23.0.jar,/home/vanguard/projects/SAMutator/tools/Infer_Dependency/android-support-v4.jar,/home/vanguard/projects/SAMutator/tools/Infer_Dependency/jsr305-src.jar,/home/vanguard/projects/SAMutator/tools/Infer_Dependency/kotlin-annotations-jvm-1.3.72.jar,/home/vanguard/projects/SAMutator/tools/Infer_Dependency/collection-1.1.0.jar,/home/vanguard/projects/SAMutator/tools/Infer_Dependency/jsr305.jar,/home/vanguard/projects/SAMutator/tools/Infer_Dependency/jackson-2.2.3.jar,/home/vanguard/projects/SAMutator/tools/Infer_Dependency/android-23.jar,/home/vanguard/projects/SAMutator/tools/Infer_Dependency/tools.jar]
[loading /modules/java.base/java/lang/reflect/Constructor.class]
[loading /modules/java.base/java/lang/reflect/InvocationTargetException.class]
[loading /modules/java.base/java/util/ArrayList.class]
[loading /home/vanguard/projects/SAMutator/tools/Infer_Dependency/jsr305.jar(/javax/annotation/concurrent/ThreadSafe.class)]
[loading /home/vanguard/projects/SAMutator/tools/Infer_Dependency/javax.inject.jar(/javax/inject/Inject.class)]
[loading /home/vanguard/projects/SAMutator/tools/Infer_Dependency/javax.inject.jar(/javax/inject/Provider.class)]
[loading /modules/java.base/java/lang/Object.class]
[loading /modules/java.base/java/lang/ThreadLocal.class]
[loading /modules/java.base/java/lang/InstantiationException.class]
[loading /modules/java.base/java/lang/IllegalAccessException.class]
[loading /modules/java.base/java/lang/NoSuchMethodException.class]
[loading /modules/java.base/java/lang/Deprecated.class]
[loading /modules/java.base/java/lang/annotation/Target.class]
[loading /modules/java.base/java/lang/annotation/ElementType.class]
[loading /modules/java.base/java/lang/annotation/Retention.class]
[loading /modules/java.base/java/lang/annotation/RetentionPolicy.class]
[loading /modules/java.base/java/lang/Override.class]
[loading /modules/java.base/java/lang/annotation/Annotation.class]
[checking codetoanalyze.java.racerd.Obj]
[loading /modules/java.base/java/io/Serializable.class]
[loading /modules/java.base/java/lang/AutoCloseable.class]
[wrote /home/vanguard/projects/SAMutator/scripts/codetoanalyze/java/racerd/Obj.class]
[checking codetoanalyze.java.racerd.CustomProvider]
[loading /modules/java.base/java/lang/Throwable.class]
[wrote /home/vanguard/projects/SAMutator/scripts/codetoanalyze/java/racerd/CustomProvider.class]
[checking codetoanalyze.java.racerd.Ownership]
[loading /modules/java.base/java/lang/Integer.class]
[loading /modules/java.base/java/lang/String.class]
[loading /modules/java.base/java/lang/Boolean.class]
[loading /modules/java.base/java/lang/ReflectiveOperationException.class]
[loading /modules/java.base/java/lang/Exception.class]
[loading /modules/java.base/java/lang/Class.class]
[loading /modules/java.base/java/lang/reflect/GenericDeclaration.class]
[loading /modules/java.base/java/lang/reflect/AnnotatedElement.class]
[loading /modules/java.base/java/lang/reflect/Type.class]
[loading /modules/java.base/java/lang/SecurityException.class]
[loading /modules/java.base/java/lang/reflect/Executable.class]
[loading /modules/java.base/java/lang/reflect/Member.class]
[loading /modules/java.base/java/lang/reflect/AccessibleObject.class]
[loading /modules/java.base/java/lang/IllegalArgumentException.class]
/home/vanguard/projects/SAMutator/src/test/java/codetoanalyze/java/racerd/Ownership.java:371: error: cannot find symbol
    SkippedClass c = SkippedClass.returnOwned();
    ^
  symbol:   class SkippedClass
  location: class Ownership
/home/vanguard/projects/SAMutator/src/test/java/codetoanalyze/java/racerd/Ownership.java:371: error: cannot find symbol
    SkippedClass c = SkippedClass.returnOwned();
                     ^
  symbol:   variable SkippedClass
  location: class Ownership
[loading /modules/java.base/java/lang/CloneNotSupportedException.class]
[loading /modules/java.base/java/lang/RuntimeException.class]
[checking codetoanalyze.java.racerd.MyObj]
[checking codetoanalyze.java.racerd.Subclass]
[checking codetoanalyze.java.racerd.OtherObj]
[checking codetoanalyze.java.racerd.ContainerOwnership]
[loading /modules/java.base/java/util/Collection.class]
[loading /modules/java.base/java/util/List.class]
[loading /modules/java.base/java/lang/Iterable.class]
[loading /modules/java.base/java/util/RandomAccess.class]
[loading /modules/java.base/java/lang/Cloneable.class]
[loading /modules/java.base/java/util/AbstractList.class]
[loading /modules/java.base/java/util/AbstractCollection.class]
[total 245ms]
Note: /home/vanguard/projects/SAMutator/src/test/java/codetoanalyze/java/racerd/Ownership.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
2 errors
